# j2a

./: Cargo.toml  readme.md  test.json
.github/workflows/: release.yml
src/: main.rs
tests/: cli.rs
tests/files/: invalid-json.json  valid.json
wix/: main.wxs
